--- a/report/DA - Report.tex
+++ b/report/DA - Report.tex
@@ -43,7 +43,7 @@ BCOR5mm, % Binding correction
 %----------------------------------------------------------------------------------------
 
 \title{\normalfont\spacedallcaps{Data Analytics Coursework: Predict the 2017 NCAA Basketball Tournament}} % The article title
-\author{\spacedlowsmallcaps{Ivaylo Snezhanov Shalev, Ziqi Zhao, Yuan-Yi Chang}} % The article author(s) - author affiliations need to be specified in the AUTHOR AFFILIATIONS block
+\author{\spacedlowsmallcaps{Ivaylo Snezhanov Shalev(161021629)} \\ \spacedlowsmallcaps{Ziqi Zhao(120724486)} \\ \spacedlowsmallcaps{Yuan-Yi Chang(160804122)}} 
 
 \date{} % An optional date to appear under the author(s)
 
@@ -313,11 +313,13 @@ As a result, we didn’t notice any large outliers or any missing data. The dist
 \includegraphics[width=\textwidth]{Weka_Correlation_Luck_WL}
 \end{figure}
 
-The correlation diagrams show some expected results. Mainly that the distribution is almost equal between the features and the target. It doesn’t matter if the offence or defence is high. Both have equal chance of winning or losing the game. Correlation of features between themselves and target as colour (WL – 0 – yellow, 1 – blue). The yellow is drawn on top of the blue.\begin{figure}[H]
+The correlation diagrams show some expected results. Mainly that the distribution is almost equal between the features and the target. It doesn’t matter if the offence or defence is high. Both have equal chance of winning or losing the game. Correlation of features between themselves and target as colour (WL – 0 – yellow, 1 – blue). The yellow is drawn on top of the blue.
+\begin{figure}[H]
   \centering
 \includegraphics[width=\textwidth]{Correlation2}
 \end{figure}
-When comparing both offence and defence and plotting the win/loose with different colour, we can see a small trend that the winning teams have higher offence and lower defence. The same with EM (margin) the higher the margin the higher the chance for win.\begin{figure}[H]
+When comparing both offence and defence and plotting the win/loose with different colour, we can see a small trend that the winning teams have higher offence and lower defence. The same with EM (margin) the higher the margin the higher the chance for win.
+\begin{figure}[H]
   \centering
 \includegraphics[width=\textwidth]{Correlation3}
 \end{figure}
